--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@coder.ua/mask-data",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Masks sensitive data",
   "main": "src/mask-data.js",
   "scripts": {
-    "test": "echo \"No test specified yet\""
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -12,12 +12,17 @@
   },
   "keywords": [
     "mask",
+    "sensitive data",
     "data",
     "maskdata",
     "datamask",
     "mask sensitive",
     "mask password",
-    "mask string"
+    "mask string",
+    "mask number",
+    "mask boolean",
+    "mask object fields",
+    "mask array values"
   ],
   "author": "Volodymyr Chumak <coder.ua@gmail.com>",
   "license": "MIT",
@@ -27,5 +32,11 @@
   "homepage": "https://github.com/coderua/mask-data#readme",
   "directories": {
     "test": "tests"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.13.1",
+    "@babel/preset-env": "^7.13.5",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3"
   }
 }
