--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "@coder.ua/mask-data",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Masks sensitive data",
-  "main": "src/mask-data.js",
+  "main": "dist/mask-data.js",
   "scripts": {
+    "build": "babel --delete-dir-on-start --minified src -d dist --source-maps",
+    "lint": "eslint --ext .js .",
+    "prepublish": "npm run build",
+    "prebuild": "npm run test",
+    "pretest": "npm run lint",
     "test": "jest"
   },
   "repository": {
@@ -37,6 +42,8 @@
     "@babel/core": "^7.13.1",
     "@babel/preset-env": "^7.13.5",
     "babel-jest": "^26.6.3",
+    "eslint": "^7.21.0",
+    "eslint-plugin-jest": "^24.1.5",
     "jest": "^26.6.3"
   }
 }
