--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "build": "babel --delete-dir-on-start --minified src -d dist --source-maps",
     "lint": "eslint --ext .js .",
+    "format": "prettier --write --list-different .",
+    "lintfix": "npm run format && npm run lint -- --fix",
     "prepublish": "npm run build",
     "prebuild": "npm run test",
-    "pretest": "npm run lint",
+    "pretest": "npm run lintfix",
     "test": "jest"
   },
   "repository": {
@@ -45,7 +47,9 @@
     "@babel/preset-env": "^7.20.2",
     "babel-jest": "^29.3.1",
     "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-jest": "^27.2.1",
-    "jest": "^29.3.1"
+    "jest": "^29.3.1",
+    "prettier": "^2.8.3"
   }
 }
