--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@coder.ua/mask-data",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "description": "Masks sensitive data",
-  "main": "dist/mask-data.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "babel --delete-dir-on-start --minified src -d dist --source-maps",
     "lint": "eslint --ext .js .",
